--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -14,6 +14,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\6X7EDNPL\\Adkison - 2021 - A Review of Salmon Spawner-Recruitment Analysis T.pdf}
 }
 
+@article{amarEvaluationTwoManagement2009,
+  title = {The Evaluation of Two Management Strategies for the {{Gulf}} of {{Alaska}} Walleye Pollock Fishery under Climate Change},
+  author = {A'mar, Z. Teresa and Punt, Andr{\'e} E. and Dorn, Martin W.},
+  year = {2009},
+  month = aug,
+  journal = {ICES Journal of Marine Science},
+  volume = {66},
+  number = {7},
+  pages = {1614--1632},
+  issn = {1095-9289, 1054-3139},
+  doi = {10.1093/icesjms/fsp044},
+  abstract = {Management strategy evaluation (MSE) is the process of using simulation testing with feedback to examine the robustness of candidate management strategies to error and uncertainty. The structure of the management strategy can be selected to attempt to satisfy desired (but conflicting) management objectives. MSE was used to assess the performance of the current management strategy and an alternative management strategy (the ``dynamic B0'' strategy) for the fishery for walleye pollock (Theragra chalcogramma) in the Gulf of Alaska (GOA), when age-1 recruitment was driven by climate. The relationships between age-1 abundance and climate indices (and the uncertainties associated with these relationships) were characterized within an age-structured operating model that was fitted to the data for GOA walleye pollock. Projections into the future were based on the fitted relationships and predictions of those indices from the Intergovernmental Panel on Climate Change (IPCC) models, using the current or the alternative management strategy to determine catch limits. Management performance (the ability to leave the stock close to the management reference level and achieve high and stable catches) deteriorated when age-1 recruitment was forced by climate, although stocks were kept near the reference level on average. In addition, the ability to estimate management-related quantities, such as spawning biomass, deteriorated markedly when recruitment was forced by climate. Performance was sensitive to the choice of IPCC dataset and, in particular, estimation and management performance was poorest (outcomes most variable) for the IPCC datasets that led to the greatest variation in recruitment to the fishery. Although basing management on a ``dynamic B0'' management strategy led to improved management and estimation performance, the magnitude of the improvement was slight.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SHC85TCE\\A’mar et al. - 2009 - The evaluation of two management strategies for th.pdf}
+}
+
 @article{arbeiderInteriorFraserCoho2020,
   title = {Interior {{Fraser Coho Salmon Recovery Potential Assessment}}},
   author = {Arbeider, Michael and Ritchie, Lynda and Braun, Doug and Jenewein, Brittany and Rickards, Karen and Dionne, Kaitlyn and Holt, Carrie and Labelle, Marc and Nicklin, Pete and Mozin, Paul and Grant, Paul and Parken, Chuck and Bailey, Richard},
@@ -22,6 +38,21 @@
   volume = {2020/025},
   pages = {xi + 222p},
   langid = {english}
+}
+
+@article{bergerCharacterTemporalVariability2019,
+  title = {Character of Temporal Variability in Stock Productivity Influences the Utility of Dynamic Reference Points},
+  author = {Berger, Aaron M.},
+  year = {2019},
+  month = sep,
+  journal = {Fisheries Research},
+  volume = {217},
+  pages = {185--197},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2018.11.028},
+  abstract = {Reference points identify benchmarks, thresholds, or decision points for fisheries management, and are commonly defined by stock status indicators that presume equilibrium population conditions in the absence of fishing (e.g., equilibrium biomass, B0). However, equilibrium population biomass may be an inappropriate reference level when stock productivity is influenced by environmental change, predator-prey dynamics, ecosystem thresholds, and myriad other factors. Simulations were conducted to compare equilibrium-based (static B0) and non-equilibrium based (dynamic B0) indicators of stock status under alternative states of nature driven by time-varying recruitment dynamics (productivity regime), fishing dynamics (mortality regime), and species life history. Using dynamic B0 often implied a different state of the stock under directional productivity regime shifts, but was more similar to static B0 reference points under cyclic or white noise productivity scenarios. Uncertainty in stock status arising from incorrectly identifying changes in system productivity generally outweighed the uncertainty associated with initial equilibrium conditions. Empirical results across 18 U.S. West Coast groundfish stock assessments indicated predominantly small differences ({$<$} 10\%) between static B0 and dynamic B0 indicators of stock status, although in some cases differences were large (up to 72\%) or spanned reference points that trigger management action. Although caution is warranted when considering dynamic reference points, this paper shows these approaches are likely to be most useful when stock productivity shifts directionally, if that productivity signal can be correctly ascertained.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\8DUZT482\\Berger - 2019 - Character of temporal variability in stock product.pdf}
 }
 
 @article{bradfordReferencePointsCoho2000,
@@ -144,7 +175,7 @@
 }
 
 @techreport{dfoCanadaPolicyConservation2005a,
-  title = {Canada's Policy for Conservation of Wild {{Pacific}} Salmon},
+  title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
   year = {2005},
   address = {{Vancouver}},
   institution = {{Fisheries and Oceans Canada}},
@@ -448,6 +479,23 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\J5XYMZMI\\Noble et al. - 2015 - Habitat-based escapement benchmarks for Coho Salmo.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\TAKF7CZY\\Coho Habitat-based BMs 2015 Res Doc.pdf}
 }
 
+@article{olearyComparisonMultipleApproaches2020,
+  title = {Comparison of Multiple Approaches to Calculate Time-Varying Biological Reference Points in Climate-Linked Population-Dynamics Models},
+  author = {O'Leary, Cecilia A and Thorson, James T and Miller, Timothy J and Nye, Janet A},
+  editor = {Heino, Mikko},
+  year = {2020},
+  month = may,
+  journal = {ICES Journal of Marine Science},
+  volume = {77},
+  number = {3},
+  pages = {930--941},
+  issn = {1054-3139, 1095-9289},
+  doi = {10.1093/icesjms/fsz215},
+  abstract = {Fisheries managers use biological reference points (BRPs) as targets or limits on fishing and biomass to maintain productive levels of fish stock biomass. There are multiple ways to calculate BRPs when biological parameters are time varying. Using summer flounder (Paralichthys dentatus) as a case study, we investigated time-varying approaches in concert with climate-linked population models to understand the impact of environmentally driven variability in natural mortality, recruitment, and size-at-age on two commonly used BRPs {$\frac{1}{2}$}B0\dh t\TH{} and F35\%(t)]. We used the following two approaches to calculate time-varying BRPs: dynamic-BRP and moving-average-BRP. We quantified the variability and uncertainty of different climate dependencies and estimation approaches, attributed BRP variation to variation in life-history processes, and evaluated how using different approaches impacts estimates of stock status. Results indicate that the dynamic-BRP approach using the climate-linked natural mortality model produced the least variable reference points compared to others calculated. Summer flounder stock status depended on the estimation approach and climate model used. These results emphasize that understanding climate dependencies is important for summer flounder reference points and perhaps other species, and careful consideration is warranted when considering what time-varying approach to use, ideally based upon simulation studies within a proposed set of management procedures.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\XJ9S3WXK\\O’Leary et al. - 2020 - Comparison of multiple approaches to calculate tim.pdf}
+}
+
 @article{pestalUpdatedMethodsAssessing2012,
   title = {Updated {{Methods For Assessing Harvest Rules For Fraser River Sockeye Salmon}} ({{Oncorhynchus}} Nerka)},
   author = {Pestal, Gottfried and Huang, Ann-Marie and Cass, Alan},
@@ -484,6 +532,23 @@
   abstract = {Limit reference points'' define a state at which fishery management has reached overfishing, overfished stock status, or some other regulatory or conservation point of concern. In many Pacific salmon Oncorhynchus spp. fishery jurisdictions, management only uses ``target reference points''\textemdash the specific numerical management objective intended to bring about some fishery benefit. There are several reasons to adopt limit reference points, and jurisdictions without previously defined limit reference points could adopt them in order to align better with the Magnuson\textendash Stevens Act (American fisheries) or, more importantly, to facilitate cross-jurisdiction sustainability assessments, which are increasingly needed for certifications of sustainability. In actual practice, the stock size of 0.5 times a target reference point has been used as a limit reference point for some Pacific salmon fisheries, or at least as a proxy for a limit reference point. We term this point the ``minimum stock size threshold,'' following a convention already in use, and we note that limit reference points defined this way are increasingly being accepted as a standard either because of justification based on simulation and fishery principles or for purely pragmatic reasons.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\F69BSGJP\\Portley and Geiger - 2014 - Limit Reference Points for Pacific Salmon Fisherie.pdf}
+}
+
+@article{puntFisheriesManagementClimate2014,
+  title = {Fisheries Management under Climate and Environmental Uncertainty: Control Rules and Performance Simulation},
+  shorttitle = {Fisheries Management under Climate and Environmental Uncertainty},
+  author = {Punt, Andr{\'e} E. and A'mar, Teresa and Bond, Nicholas A. and Butterworth, Douglas S. and {de Moor}, Carryn L. and De Oliveira, Jos{\'e} A. A. and Haltuch, Melissa A. and Hollowed, Anne B. and Szuwalski, Cody},
+  year = {2014},
+  month = oct,
+  journal = {ICES Journal of Marine Science},
+  volume = {71},
+  number = {8},
+  pages = {2208--2220},
+  issn = {1095-9289, 1054-3139},
+  doi = {10.1093/icesjms/fst057},
+  abstract = {The ability of management strategies to achieve the fishery management goals are impacted by environmental variation and, therefore, also by global climate change. Management strategies can be modified to use environmental data using the ``dynamic B0'' concept, and changing the set of years used to define biomass reference points. Two approaches have been developed to apply management strategy evaluation to evaluate the impact of environmental variation on the performance of management strategies. The ``mechanistic approach'' estimates the relationship between the environment and elements of the population dynamics of the fished species and makes predictions for population trends using the outputs from global climate models. In contrast, the ``empirical approach'' examines possible broad scenarios without explicitly identifying mechanisms. Many reviewed studies have found that modifying management strategies to include environmental factors does not improve the ability to achieve management goals much, if at all, and only if the manner in which these factors drive the system is well known. As such, until the skill of stock projection models improves, it seems more appropriate to consider the implications of plausible broad forecasts related to how biological parameters may change in the future as a way to assess the robustness of management strategies, rather than attempting specific predictions per se.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\EU42PG5C\\Punt et al. - 2014 - Fisheries management under climate and environment.pdf}
 }
 
 @incollection{puntHarvestControlRules2010,
@@ -537,6 +602,14 @@
   abstract = {Stock\textendash recruitment relationships (SRRs) may vary over time due to ecological and anthropogenic impacts, challenging traditional approaches of calculating maximum sustainable yield (MSY)-based reference points that assume constant population traits. We compare seven methods to calculate MSY, FMSY and BMSY by modelling constant, stochastic (uncorrelated), and autocorrelated SRRs using simulations and two case studies [Atlantic cod (Gadus morhua) and American plaice (Hippoglossoides platessoides) on the Grand Bank off Newfoundland, Canada]. Results indicated that the method used to model SRRs strongly affected the temporal pattern of recruitment projection, and the variations generated by autocorrelated SRRs were more similar to observed patterns. When the population productivity had low-frequency and largemagnitude variations, stochastic SRRs generated greater MSY and FMSY estimates than constant or autocorrelated SRRs, while no consistent pattern of BMSY was detected. In the case studies, stochastic and autocorrelated SRRs produced asymmetric relationships between fishing mortality and yield, with higher risk of overfishing by going beyond FMSY. Overall, our results suggest that caution should be taken when calculating MSY-based reference points in highly dynamic ecosystems, and correctly accounting for non-stationary population dynamics could, therefore, lead to more sustainable fisheries.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\79236HY9\\Zhang et al. - 2021 - Accounting for non-stationary stock–recruitment re.pdf}
+}
+
+@techreport{zhangReportOceanFrontier2021,
+  title = {Report on {{Ocean Frontier Institute}} ({{OFI}}) {{Workshop}} on {{Fisheries Management Reference Points}} in {{Highly Dynamic Ecosystems}}},
+  author = {Zhang, F. and Eddy, T.D. and Duplisea, D.E. and Robertson, M.D. and {Ruiz-Diaz}, R. and Solberg, C.A.},
+  year = {2021},
+  pages = {24},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\IZSQL5C8\\Zhang2021Dynamic Reference Points for Fisheries Management Workshop Report Final Final.docx}
 }
 
 
