a few small revisions to Ch 3 paragraph on considering multi-dimensional approach in logReg LRP

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -213,7 +213,7 @@ When estimating logistic regression LRPs using $S_{gen}$, we used an integrated 
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
-We did initially consider a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Initial model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable auto-correlation. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. The second limiting factor in establishing a statistical relationship between rapid multidimensional estimates of CU status and aggregate spawner abundance is that the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
+We initially considered a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable auto-correlation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the auto-correlation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. The second limiting factor in establishing a statistical relationship between rapid multidimensional estimates of CU status and aggregate spawner abundance is that the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
 
 
 ***Retrospective Analysis***
